sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:15: error: 'while' expected but '}' found.
} while (pos!=getValeurNombre()-1)
^AlgGnomeSort:15: error: ';' expected but 'while' found.
} while (pos!=getValeurNombre()-1)
  ^