sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var pos=0
  do {
    if (!plusPetit(i,i+1)) {
      echange(i,i+1)
      if (pos==0) {
        pos=pos+1
      } else {
        pos=pos-1}
    } else {
      pos=pos+1
    }
  }
} while (pos!=getValeurNombre()-1)
